# test

./: .gitignore  Dockerfile  README.md  agent.yaml  docker-compose.yaml  env.example  pyproject.toml  test.docx
data/docs/: оферта WB_1.txt
src/: ask.py  chunk_documents.py  create_index.py  embedding_documents.py  load_documents.py  main.py  retriever.py
src/storage/: docstore.json
