[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.14.23",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-qdrant>=0.10.2",
    "llmfit>=1.1.2",
    "qdrant-client>=1.18.0",
]
