[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "llama-index>=0.14.23",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-qdrant>=0.10.2",
    "llmfit>=1.1.2",
    "pydantic>=2.13.4",
    "qdrant-client>=1.18.0",
    "uvicorn[standard]>=0.51.0",
]
